# GraphicsAPI_Note

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  temp.md
Doc/: Arm Mali GPU_GPU architecture.md  Dear ImGui使用经验.md  GPU综述.md  LogicalGraphicsPipeline.drawio  RHI层设计.md  Vulkan高性能渲染.md  三维模型格式解析.md  图形概念理解.md
Source/: CMakeLists.txt  EditorConfig.Json
Source/Application/: CMakeLists.txt  Engine.cpp  Engine.h
Source/Application/Core/: ConfigManager.cpp  ConfigManager.h  GlobalContext.cpp  GlobalContext.h  logSysytem.cpp  logSysytem.h
Source/Application/Editor/: Editor.cpp  Editor.h  EditorInputManager.cpp  EditorInputManager.h  EditorSceneManager.cpp  EditorSceneManager.h  EditorUI.cpp  EditorUI.h  WindowsApplication.cpp  WindowsApplication.h  main.cpp
Source/Application/RHI/: VulkanRHI.cpp  VulkanRHI.h  VulkanUtil.cpp  VulkanUtil.h
Source/Application/Render/: Light.h  RenderCamera.cpp  RenderCamera.h  RenderCommon.h  RenderMesh.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderResource.cpp  RenderResource.h  RenderScene.h  RenderSwapContext.h  RenderSystem.cpp  RenderSystem.h  RenderType.h
Source/Application/Render/Pass/: PointLightShadowPass.cpp  PointLightShadowPass.h  UIPass.cpp  UIPass.h
Source/Application/Resource/: ConfigManager.cpp  ConfigManager.h
Source/Application/shader/: CMakeLists.txt
Source/Sample/: CMakeLists.txt
Source/Sample/ImguiTest/: CMakeLists.txt  Main.cpp  VulkanSetup.cpp  VulkanSetup.h
Source/Vulkan/: CMakeLists.txt  VulkanConfig.Json
Source/Vulkan/Doc/: DearImGui_Integration.md  ImageLayout_Tiling.md  VulkanBuffer.md  VulkanNote.md  Vulkan中的核心概念理解.drawio  Vulkan渲染流程总结.drawio
Source/Vulkan/Source/: CMakeLists.txt
Source/Vulkan/Source/00_Setup/02_validation_layer/: 02_validation_layer.cpp
Source/Vulkan/Source/00_Setup/03_physical_device_selection/: CMakeLists.txt  physical_device_selection.cpp
Source/Vulkan/Source/00_Setup/04_logical_device_selection/: CMakeLists.txt  logical_device_selection.cpp
Source/Vulkan/Source/01_Presentation/: CMakeLists.txt
Source/Vulkan/Source/01_Presentation/05_WindowsSurface/: WindowsSurface.cpp  WindowsSurface.h  main.cpp
Source/Vulkan/Source/01_Presentation/06_swap_chain_creation/: main.cpp  swap_chain_creation.cpp  swap_chain_creation.h
Source/Vulkan/Source/01_Presentation/07_image_views/: CMakeLists.txt  image_views.cpp  image_views.h  main.cpp
Source/Vulkan/Source/02_GraphicsPipeline/08_Graphics_Pipeline/: CMakeLists.txt  Graphics_Pipeline.cpp  Graphics_Pipeline.h
Source/Vulkan/Source/03_Drawing/13_FrameBuffers/: CMakeLists.txt  FrameBuffers.cpp  FrameBuffers.h  main.cpp
Source/Vulkan/Source/03_Drawing/16_Frames_in_flight/: CMakeLists.txt  Frames_in_flight.cpp  Frames_in_flight.h  main.cpp
Source/Vulkan/Source/04_VertexBuffers/18_Vertex_Buffers/: Vertex_Buffers.cpp  Vertex_Buffers.h  shader_vertexbuffer.vert
Source/Vulkan/Source/04_VertexBuffers/20_Staging_Buffer/: Staging_Buffer.cpp  main.cpp
Source/Vulkan/Source/04_VertexBuffers/21_Index_Buffer/: Index_Buffer.cpp
Source/Vulkan/Source/04_Vertex_Buffers/18_Vertex_Buffers/: CMakeLists.txt  Vertex_Buffers.cpp  Vertex_Buffers.h  main.cpp
Source/Vulkan/Source/04_Vertex_Buffers/20_Staging_Buffer/: CMakeLists.txt  Staging_Buffer.cpp  Staging_Buffer.h
Source/Vulkan/Source/04_Vertex_Buffers/21_Index_Buffer/: Index_Buffer.cpp  Index_Buffer.h  main.cpp
Source/Vulkan/Source/05_Uniform_Buffers/22_Descriptor_Layout/: CMakeLists.txt  Descriptor_Layout_And_Buffer.cpp  Descriptor_Layout_And_Buffer.h  main.cpp
Source/Vulkan/Source/06_Texture_Mapping/24_Texture_Image/: main.cpp  texture_image.cpp  texture_image.h
Source/Vulkan/Source/06_Texture_Mapping/25_Combined_Image_Sampler/: CMakeLists.txt  Image_Sampler.cpp  Image_Sampler.h  main.cpp  shader_textures.frag
Source/Vulkan/Source/07_Depth_Buffers/27_Depth_Buffering/: Depth_Buffer.cpp  Depth_Buffer.h  main.cpp
Source/Vulkan/Source/08_Model_Loading/28_Model_Loading/: CMakeLists.txt  Model_Loading.cpp  Model_Loading.h  main.cpp
Source/Vulkan/Source/09_MipMaps/29_MipMaps/: CMakeLists.txt  MipMapping.cpp  MipMapping.h  main.cpp
Source/Vulkan/Source/10_Multisampling/30_Multisample/: CMakeLists.txt  main.cpp  multisample.cpp  multisample.h
Source/Vulkan/Source/10_Multisampling/31_AddImGui/: CMakeLists.txt  ImGuiPass.cpp  ImGuiPass.h  MipMapping.cpp  MipMapping.h  mian.cpp
Source/Vulkan/TutorialDocument/: 01 简介 Introduction.md  02 概述 Overview.md  03 开发环境 Development environment.md  08 深度缓冲 Depth buffering.md  09 加载模型 Loading models.md  10 生成多级渐远纹理 Generating Mipmaps.md  11 多重采样 Multisampling.md  12 常见问题 FAQ.md  SUMMARY.md  summary_generate.py
Source/Vulkan/TutorialDocument/04 画一个三角形 Drawing a triangle/04-01 建立 Setup/: 04-01-02 实例 Instance.md  04-01-03 验证层 Validation layers.md
Source/Vulkan/TutorialDocument/04 画一个三角形 Drawing a triangle/04-02 显示 Presentation/: 04-02-02 交换链 Swap chain.md
Source/Vulkan/TutorialDocument/04 画一个三角形 Drawing a triangle/04-03 图形管线基础 Graphics pipeline basics/: 04-03-01 简介 Introduction.md  04-03-02 着色器模块 Shader modules.md  04-03-03 固定功能 Fixed functions.md  04-03-04 渲染过程 Render passes.md
Source/Vulkan/TutorialDocument/04 画一个三角形 Drawing a triangle/04-04 绘制 Drawing/: 04-04-03 渲染与显示 Rendering and presentation.md
Source/Vulkan/TutorialDocument/05 顶点缓冲 Vertex buffers/: 05-01 顶点输入描述 Vertex input description.md  05-02 创建顶点缓冲 Vertex buffer creation.md  05-03 暂存缓冲 Staging buffer.md  05-04 索引缓冲 Index buffer.md
Source/Vulkan/TutorialDocument/06 Uniform缓冲 Uniform Buffers/: 06-01 描述符布局与描述符缓冲 Descriptor layout and buffer.md  06-02 描述符池与描述符集合 Descriptor pool and sets.md
Source/Vulkan/TutorialDocument/07 纹理映射 Texture mapping/: 07-01 图像 Images.md  07-02 图像视图与采样器 Image view and sample.md  07-03 组合图像采样器 Combined image sampler.md
Vulkan/: CMakeLists.txt  Notes.md
Vulkan/Doc/: VulkanNote.md
Vulkan/Source/00_base_code/: 00_base_code.cpp
Vulkan/Source/01_Presentation/: CMakeLists.txt
Vulkan/Source/01_instance_creation.cpp/: CMakeLists.txt
Vulkan/Source/02_validation_layer/: 02_validation_layer.cpp
(+22 files in other folders)
